--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,3 +1,83 @@
+$degradado-principal:linear-gradient(to right, #0a0b0c, #303137);
+$degradado-menu:linear-gradient(to right, #0b427997, rgba(90, 113, 147, 0.399));
+
+$borde-estandar-1:5px;
+$borde-estandar-2:5px solid black;
+
+$direccion-estandar-column:column;
+$direccion-estandar-col-rev:column-reverse;
+
+$porcentaje-estandar-50:50%;
+$porcentaje-estandar-60:60%;
+$porcentaje-estandar-90:90%;
+$porcentaje-estandar-100:100%;
+
+$posicion-estandar-top:top;
+$posicion-estandar-center:center;
+$posicion-estandar-bottom:bottom;
+$posicion-estandar-auto:auto;
+$posicion-estandar-rigth:right;
+$posicion-estandar-relative:relative;
+
+$medida-estandar-0:0px;
+$medida-estandar-25:25px;
+$medida-estandar-30:30px;
+$medida-estandar-50:50px;
+$medida-estandar-10:10px;
+$medida-estandar-40:40px;
+$medida-estandar-110:110px;
+$medida-estandar-200:200px;
+$medida-estandar-320:320px;
+$medida-estandar-300:300px;
+$medida-estandar-350:350px;
+$medida-estandar-370:370px;
+$medida-estandar-500:500px;
+$medida-estandar-536:536px;
+$medida-estandar-600:600px;
+$medida-estandar-700:700px;
+
+$fuente-escala-1:1rem;
+$fuente-escala-2:1.2rem;
+$fuente-escala-3:1.3rem;
+$fuente-escala-4:1.5rem;
+$fuente-escala-5:1.8rem;
+
+$fuente-forma-mayus:uppercase;
+$fuente-forma-neg:bold;
+$fuente-forma-alin:justify;
+
+$tipo-fuente-estandar-1:Poppins, sans-serif;
+$tipo-fuente-estandar-2:'Shadows Into Light', cursive;
+$tipo-fuente-estandar-3:Shadows, sans-serif;
+
+$imagen-fondo-main:url('../assets/img/storm_background.jpg');
+$imagen-fondo-diablo-1:url('../assets/img/diablo_4.png');
+$imagen-fondo-diablo-2:url('../assets/img/diablo_4_movil.png');
+$imagen-fondo-sky-1:url('../assets/img/no_man_sky.png');
+$imagen-fondo-sky-2:url('../assets/img/no_man_sky_movil.png');
+$imagen-fondo-street-1:url('../assets/img/street_fighter_6.jpg');
+$imagen-fondo-street-2:url('../assets/img/street_fighter_6_movil.png');
+$imagen-fondo-dredge-1:url('../assets/img/dredge.jpg');
+$imagen-fondo-dredge-2:url('../assets/img/dredge_movil.png');
+$imagen-fondo-star-1:url('../assets/img/star_war_survivor.jpg');
+$imagen-fondo-star-2:url('../assets/img/star_war_survivor_movil.png');
+$imagen-fondo-avance-1:url('../assets/img/fondo_analisis_1.jpg');
+$imagen-fondo-avance-2:url('../assets/img/fondo_analisis_2.jpg');
+
+$imagen-espacio:cover;
+$imagen-agregado:fixed;
+
+$color-estandar-1:aqua;
+$color-estandar-2:rgba(0, 0, 0, 0.473);
+$color-estandar-3:rgba(0, 0, 0, 0.603);
+$color-estandar-4:linear-gradient(to right, rgb(23, 29, 35), rgba(30, 39, 47, 0.479));
+$color-estandar-5:linear-gradient(to right, #fafafabf, rgba(119, 122, 125, 0.075));
+$color-estandar-6:rgba(0, 0, 0, 0.525);
+$color-estandar-7:rgb(255, 255, 255);
+$color-estandar-8:rgb(22, 78, 139);
+$color-estandar-9:rgb(58, 113, 172);
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600&family=Shadows+Into+Light&display=swap');
 
 *{
@@ -9,17 +89,17 @@
 /***** Mapa *****/
 
 .mapouter{
-    position:relative;
-    text-align:right;
-    height:370px;
-    width:536px;
+    position:$posicion-estandar-relative;
+    text-align:$posicion-estandar-rigth;
+    height:$medida-estandar-370;
+    width:$medida-estandar-536;
 }
 
 .gmap_canvas{
     overflow:hidden;
     background:none!important;
-    height:370px;
-    width:536px;
+    height:$medida-estandar-370;
+    width:$medida-estandar-536;
 }
 
 /************************************************
@@ -27,42 +107,42 @@
 *************************************************/
 
 header{
-    background: linear-gradient(to right, #0a0b0c, #303137);
+    background: $degradado-principal;
 }
 
 .nav{
-    padding: 0px;
+    padding: $medida-estandar-0;
 }
 
 .lista{
-    width: 100%;
+    width: $porcentaje-estandar-100;
 }
 
 .divImgNav img{
-    width: 50px;
-    height: 50px;
+    width: $medida-estandar-50;
+    height: $medida-estandar-50;
 }
 
 .lista li{
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-family: Shadows, sans-serif;
+    font-size: $fuente-escala-1;
+    text-transform: $fuente-forma-mayus;
+    font-family: $tipo-fuente-estandar-3;
     font-weight: 400;
 }
 
 .active{
-    background: linear-gradient(to right, #0b427997, rgba(90, 113, 147, 0.399));
-    border-radius: 5px;
+    background: $degradado-menu;
+    border-radius: $borde-estandar-1;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover{
-    background: linear-gradient(to right, #0b427997, rgba(90, 113, 147, 0.122));
-    border-radius: 5px;
+    background: $degradado-menu;
+    border-radius: $borde-estandar-1;
 }
 
 .divImgNav img:hover{
-    background-color:aqua;
-    border-radius: 50%;
+    background-color:$color-estandar-1;
+    border-radius: $porcentaje-estandar-50;
 }
 
 /************************************************
@@ -70,70 +150,65 @@ header{
 ************************************************/
 
 main{
-    background-image: url('../assets/img/storm_background.jpg');
-    background-attachment: fixed;
+    background-image: $imagen-fondo-main;
+    background-attachment: $imagen-agregado;
     background-repeat: no-repeat;
 }
 
 .h1Tittle{
-    font-size: 1.8rem;
-    font-family: Poppins, sans-serif;
+    font-size: $fuente-escala-5;
+    font-family: $tipo-fuente-estandar-1;
     font-weight: 600;
 }
 
 .h2Tittle{
-    font-size: 1.5rem;
-    font-family: Poppins, sans-serif;
+    font-size: $fuente-escala-4;
+    font-family: $tipo-fuente-estandar-1;
 }
 
 .h3Tittle{
-    font-size: 1rem;
-    font-family: Poppins, sans-serif;
-    margin-top: 30px;
-    margin-bottom: 10px;
+    font-size: $fuente-escala-1;
+    font-family: $tipo-fuente-estandar-1;
+    margin-top: $medida-estandar-30;
+    margin-bottom: $medida-estandar-10;
 }
 
 .h4Tittle{
-    font-size: 1.3rem;
-    font-family: Poppins, sans-serif;
-    margin-top: 30px;
-    margin-bottom: 10px;
+    font-size: $fuente-escala-3;
+    font-family: $tipo-fuente-estandar-1;
+    margin-top: $medida-estandar-30;
+    margin-bottom: $medida-estandar-10;
 }
 
 .parrafo{
-    font-family: Poppins, sans-serif;
-    font-size: 1rem;
+    font-family: $tipo-fuente-estandar-1;
+    font-size: $fuente-escala-1;
     font-weight: 200;
-    text-align:justify;
+    text-align:$fuente-forma-alin;
 }
 
 .borde{
-    border-top: 5px solid black;
+    border-top: $borde-estandar-2;
 }
 
 /***** Pantalla Index *****/
 
-#videoInicio{
-    z-index: 1;
-}
-
 .contenedorInicio{
-    z-index: 2;
-    background-color: rgba(0, 0, 0, 0.473);
-    height: 110px;
-    width: 700px;
-    border-radius: 5px;
+    background-color: $color-estandar-2;
+    height: $medida-estandar-110;
+    width: $medida-estandar-700;
+    border-radius: $borde-estandar-1;
 }
 
 .tituloPrincipal{
-    font-size: 40px;
-    font-family: 'Shadows Into Light', cursive;
-    font-weight: bold;
+    font-size: $medida-estandar-40;
+    font-family: $tipo-fuente-estandar-2;
+    font-weight: $fuente-forma-neg;
 }
 
 .imgInicio{
-    width: 200px;
-    height: 320px;
+    width: $medida-estandar-200;
+    height: $medida-estandar-320;
 }
 
 .carousel-item{
@@ -141,125 +216,125 @@ main{
 }
 
 .carousel-item img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: $porcentaje-estandar-100;
+    height: $porcentaje-estandar-100;
+    object-fit: $imagen-espacio;
 }
 
 .contenedorIndex{
-    background-color: rgba(0, 0, 0, 0.603);
+    background-color: $color-estandar-3;
 }
 
 .contenedorCard{
-    margin:0 auto;
+    margin:0 $posicion-estandar-auto;
     gap:3rem;
 }
 
 .cardRecomendado{
-    width:350px;
-    height:auto;
-    background: linear-gradient(to right, rgb(23, 29, 35), rgba(30, 39, 47, 0.479));
-    border-radius: 5px;
+    width:$medida-estandar-350;
+    height:$posicion-estandar-auto;
+    background: $color-estandar-4;
+    border-radius: $borde-estandar-1;
 }
 
 /***** Pantalla Analisis *****/
 
 .divDiablo4{
-    height: 600px;
-    background-image: url('../assets/img/diablo_4.png');
-    background-position:top;
-    border-bottom: 5px solid black;
-    border-top: 5px solid black;
+    height: $medida-estandar-600;
+    background-image: $imagen-fondo-diablo-1;
+    background-position:$posicion-estandar-top;
+    border-bottom: $borde-estandar-2;
+    border-top: $borde-estandar-2;
 }
 
 .divNoMamSky{
-    height: 600px;
-    background-image: url('../assets/img/no_man_sky.png');
-    border-bottom: 5px solid black;
+    height: $medida-estandar-600;
+    background-image: $imagen-fondo-sky-1;
+    border-bottom: $borde-estandar-2;
 }
 
 .divStreetFighter{
-    height: 600px;
-    background-image: url('../assets/img/street_fighter_6.jpg');
-    background-position-x: center;
-    background-position-y:center;
-    border-bottom: 5px solid black;
+    height: $medida-estandar-600;
+    background-image: $imagen-fondo-street-1;
+    background-position-x: $posicion-estandar-center;
+    background-position-y:$posicion-estandar-center;
+    border-bottom: $borde-estandar-2;
 }
 
 .divDredge{
-    height: 600px;
-    background-image: url('../assets/img/dredge.jpg');
-    background-position: bottom;
-    border-bottom: 5px solid black;
+    height: $medida-estandar-600;
+    background-image: $imagen-fondo-dredge-1;
+    background-position: $posicion-estandar-bottom;
+    border-bottom: $borde-estandar-2;
 }
 
 .divStarWars{
-    height: 600px;
-    background-image: url('../assets/img/star_war_survivor.jpg');
-    background-position-y:center;
-    border-bottom: 5px solid black;
-    margin-bottom: 50px;
+    height: $medida-estandar-600;
+    background-image: $imagen-fondo-star-1;
+    background-position-y:$posicion-estandar-center;
+    border-bottom: $borde-estandar-2;
+    margin-bottom: $medida-estandar-50;
 }
 
 .contenedorFondoAnalisis{
-    width: 600px;
+    width: $medida-estandar-600;
 }
 
 .contenedorAnalisis{
-    background-color: rgba(0, 0, 0, 0.525);
-    height: auto;
+    background-color: $color-estandar-6;
+    height: $posicion-estandar-auto;
 }
 
 .hoverAnalisis:hover{
-    background: linear-gradient(to right, #fafafabf, rgba(119, 122, 125, 0.075));
-    border-radius: 5px;
+    background: $color-estandar-5;
+    border-radius: $borde-estandar-1;
 }
 
 /***** Pantalla Avances *****/
 
 .divContenedorAvance1{
-    background-image: url('../assets/img/fondo_analisis_1.jpg');
-    border-bottom: 5px solid black;
-    border-top: 5px solid black;
+    background-image: $imagen-fondo-avance-1;
+    border-bottom: $borde-estandar-2;
+    border-top: $borde-estandar-2;
 }
 
 .divContenedorAvance2{
-    background-image: url('../assets/img/fondo_analisis_2.jpg');
-    border-bottom: 5px solid black;
+    background-image: $imagen-fondo-avance-2;
+    border-bottom: $borde-estandar-2;
 }
 
 .imagenAvances{
-    width: 500px;
-    height: 300px;
+    width: $medida-estandar-500;
+    height: $medida-estandar-300;
 }
 
 .iFrame{
-    width:500px; 
-    height:300px
+    width:$medida-estandar-500; 
+    height:$medida-estandar-300
 }
 
 /***** Pantalla Guias *****/
 
 .parrafoColor{
-    color: rgb(255, 255, 255);
+    color: $color-estandar-7;
 }
 
 .parrafoHover:hover{
-    color:aqua;
+    color:$color-estandar-1
 }
 
 /***** Pantalla Contacto *****/
 
 .btnForm{
-    background-color: rgb(22, 78, 139);
+    background-color: $color-estandar-8;
 }
 
 .btnForm:hover{
-    background-color: rgb(58, 113, 172);
+    background-color: $color-estandar-9;
 }
     
 .formulario{
-    width: 60%;
+    width: $porcentaje-estandar-60;
 }
 
 
@@ -268,15 +343,15 @@ main{
 ************************************************/
 
 .divFooter{
-    background: linear-gradient(to right, #0a0b0c, #303137);
+    background: $degradado-principal;
 }
 
 .divFooter img{
-    width: 30px;
-    height: 40px;
-    margin-right: 10px;
-    padding-bottom: 10px;
-    margin-left: 10px;
+    width: $medida-estandar-30;
+    height: $medida-estandar-40;
+    margin-right: $medida-estandar-10;
+    padding-bottom: $medida-estandar-10;
+    margin-left: $medida-estandar-10;
 }
 
 /************************************************
@@ -290,90 +365,90 @@ main{
     ************************************************/
     
     .h1Tittle{
-        font-size: 1.2rem;
+        font-size: $fuente-escala-2;
     }
 
     .h2Tittle{
-        font-size: 1.2rem;
+        font-size: $fuente-escala-2;
     }
 
     .h4Tittle{
-        font-size: 1rem;
+        font-size: $fuente-escala-1;
     }
 
     .parrafo{
-        font-size: 1rem;
+        font-size: $fuente-escala-1;
     }
 
     /***** Pantalla Index *****/
 
     .contenedorInicio{
-        height: auto;
-        width: 90%;
+        height: $posicion-estandar-auto;
+        width: $porcentaje-estandar-90;
     }
 
     .tituloPrincipal{
-        font-size: 25px;
+        font-size: $medida-estandar-25;
     }
 
     .divRecomendados{
-        flex-direction: column;
+        flex-direction: $direccion-estandar-column;
     }
 
     .carousel-item{
-        height: auto;
+        height: $posicion-estandar-auto;
     }
 
     .contenedorCard{
-        flex-direction: column;
+        flex-direction: $direccion-estandar-column;
     }
 
     .cardRecomendado{
-        width: 100%;
+        width: $porcentaje-estandar-100;
     }
 
     /***** Pantalla Analisis *****/
 
     .divDiablo4{
-        background-image: url('../assets/img/diablo_4_movil.png');
+        background-image: $imagen-fondo-diablo-2;
     }
 
     .divNoMamSky{
-        background-image: url('../assets/img/no_man_sky_movil.png');
+        background-image: $imagen-fondo-sky-2;
     }
 
     .divStreetFighter{
-        background-image: url('../assets/img/street_fighter_6_movil.png');
+        background-image: $imagen-fondo-street-2;
     }
 
     .divDredge{
-        background-image: url('../assets/img/dredge_movil.png');
+        background-image: $imagen-fondo-dredge-2;
     }
 
     .divStarWars{
-        background-image: url('../assets/img/star_war_survivor_movil.png');
+        background-image: $imagen-fondo-star-2;
     }
 
     /***** Pantalla Avances *****/
 
     .invertir{
-        flex-direction: column-reverse;
+        flex-direction: $direccion-estandar-col-rev;
     }
 
     .imagenAvances{
-        width: 100%;
-        height: auto;
+        width: $porcentaje-estandar-100;
+        height: $posicion-estandar-auto;
     }
 
     .iFrame{
-        width: 100%;
-        height:200px;
+        width: $porcentaje-estandar-100;
+        height:$medida-estandar-200;
     }
 
     /***** Pantalla Contacto *****/
     
     .formulario{
-        width: 100%;
+        width: $porcentaje-estandar-100;
     }
     
     /************************************************
@@ -381,6 +456,6 @@ main{
     ************************************************/
 
     .links{
-        width: 100%;
+        width: $porcentaje-estandar-100;
     }
 }
