feature/preEntregaTres sass aplicado

--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -1,521 +1,6 @@
-$degradado-principal:linear-gradient(to right, #0a0b0c, #303137);
-$degradado-menu:linear-gradient(to right, #0b427997, rgba(90, 113, 147, 0.399));
-
-$borde-estandar-1:5px;
-$borde-estandar-2:5px solid black;
-
-$direccion-estandar-column:column;
-$direccion-estandar-col-rev:column-reverse;
-
-$porcentaje-estandar-50:50%;
-$porcentaje-estandar-60:60%;
-$porcentaje-estandar-90:90%;
-$porcentaje-estandar-100:100%;
-
-$posicion-estandar-top:top;
-$posicion-estandar-center:center;
-$posicion-estandar-bottom:bottom;
-$posicion-estandar-auto:auto;
-$posicion-estandar-rigth:right;
-$posicion-estandar-relative:relative;
-
-$medida-estandar-0:0px;
-$medida-estandar-10:10px;
-$medida-estandar-25:25px;
-$medida-estandar-30:30px;
-$medida-estandar-40:40px;
-$medida-estandar-50:50px;
-$medida-estandar-110:110px;
-$medida-estandar-200:200px;
-$medida-estandar-300:300px;
-$medida-estandar-320:320px;
-$medida-estandar-350:350px;
-$medida-estandar-370:370px;
-$medida-estandar-500:500px;
-$medida-estandar-536:536px;
-$medida-estandar-600:600px;
-$medida-estandar-700:700px;
-
-$fuente-escala-1:1rem;
-$fuente-escala-2:1.2rem;
-$fuente-escala-3:1.3rem;
-$fuente-escala-4:1.5rem;
-$fuente-escala-5:1.8rem;
-
-$fuente-forma-mayus:uppercase;
-$fuente-forma-neg:bold;
-$fuente-forma-alin:justify;
-
-$tipo-fuente-estandar-1:Poppins, sans-serif;
-$tipo-fuente-estandar-2:'Shadows Into Light', cursive;
-$tipo-fuente-estandar-3:Shadows, sans-serif;
-
-$imagen-fondo-main:url('../assets/img/storm_background.jpg');
-$imagen-fondo-diablo-1:url('../assets/img/diablo_4.png');
-$imagen-fondo-diablo-2:url('../assets/img/diablo_4_movil.png');
-$imagen-fondo-sky-1:url('../assets/img/no_man_sky.png');
-$imagen-fondo-sky-2:url('../assets/img/no_man_sky_movil.png');
-$imagen-fondo-street-1:url('../assets/img/street_fighter_6.jpg');
-$imagen-fondo-street-2:url('../assets/img/street_fighter_6_movil.png');
-$imagen-fondo-dredge-1:url('../assets/img/dredge.jpg');
-$imagen-fondo-dredge-2:url('../assets/img/dredge_movil.png');
-$imagen-fondo-star-1:url('../assets/img/star_war_survivor.jpg');
-$imagen-fondo-star-2:url('../assets/img/star_war_survivor_movil.png');
-$imagen-fondo-avance-1:url('../assets/img/fondo_analisis_1.jpg');
-$imagen-fondo-avance-2:url('../assets/img/fondo_analisis_2.jpg');
-
-$imagen-espacio:cover;
-$imagen-agregado:fixed;
-
-$color-estandar-1:aqua;
-$color-estandar-2:rgba(0, 0, 0, 0.473);
-$color-estandar-3:rgba(0, 0, 0, 0.603);
-$color-estandar-4:linear-gradient(to right, rgb(23, 29, 35), rgba(30, 39, 47, 0.479));
-$color-estandar-5:linear-gradient(to right, #fafafabf, rgba(119, 122, 125, 0.075));
-$color-estandar-6:rgba(0, 0, 0, 0.525);
-$color-estandar-7:rgb(255, 255, 255);
-$color-estandar-8:rgb(22, 78, 139);
-$color-estandar-9:rgb(58, 113, 172);
-
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600&family=Shadows+Into+Light&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/***** Mapa *****/
-
-.mapouter{
-    position:$posicion-estandar-relative;
-    text-align:$posicion-estandar-rigth;
-    height:$medida-estandar-370;
-    width:$medida-estandar-536;
-}
-
-.gmap_canvas{
-    overflow:hidden;
-    background:none!important;
-    height:$medida-estandar-370;
-    width:$medida-estandar-536;
-}
-
-/************************************************
-                      HEADER
-*************************************************/
-
-header{
-    background: $degradado-principal;
-    .nav{
-        padding: $medida-estandar-0;
-        img{
-            width: $medida-estandar-50;
-            height: $medida-estandar-50;
-        }
-        img:hover{
-            background-color:$color-estandar-1;
-            border-radius: $porcentaje-estandar-50;
-        }
-        .lista{
-            width: $porcentaje-estandar-100;
-            li{
-                font-size: $fuente-escala-1;
-                text-transform: $fuente-forma-mayus;
-                font-family: $tipo-fuente-estandar-3;
-                font-weight: 400;
-                .active{
-                    background: $degradado-menu;
-                    border-radius: $borde-estandar-1;
-                }
-            }
-        } 
-    }
-    .navbar-dark .navbar-nav .nav-link:hover{
-        background: $degradado-menu;
-        border-radius: $borde-estandar-1;
-    }
-}
-
-/************************************************
-                       MAIN
-************************************************/
-
-.h1Tittle{
-    font-size: $fuente-escala-5;
-    font-family: $tipo-fuente-estandar-1;
-    font-weight: 600;
-}
-
-.h2Tittle{
-    font-size: $fuente-escala-4;
-    font-family: $tipo-fuente-estandar-1;
-}
-
-.h3Tittle{
-    font-size: $fuente-escala-1;
-    font-family: $tipo-fuente-estandar-1;
-    margin-top: $medida-estandar-30;
-    margin-bottom: $medida-estandar-10;
-}
-
-.h4Tittle{
-    font-size: $fuente-escala-3;
-    font-family: $tipo-fuente-estandar-1;
-    margin-top: $medida-estandar-30;
-    margin-bottom: $medida-estandar-10;
-}
-
-.parrafo{
-    font-family: $tipo-fuente-estandar-1;
-    font-size: $fuente-escala-1;
-    font-weight: 200;
-    text-align:$fuente-forma-alin;
-}
-
-.borde{
-    border-top: $borde-estandar-2;
-}
-
-/***** Pantalla Index *****/
-
-main{
-    background-image: $imagen-fondo-main;
-    background-attachment: $imagen-agregado;
-    background-repeat: no-repeat;
-
-    .contenedorInicio{
-        background-color: $color-estandar-2;
-        height: $medida-estandar-110;
-        width: $medida-estandar-700;
-        border-radius: $borde-estandar-1;
-        .tituloPrincipal{
-            font-size: $medida-estandar-40;
-            font-family: $tipo-fuente-estandar-2;
-            font-weight: $fuente-forma-neg;
-        }
-    }
-    
-    .carousel-item{
-        height: 80vh;
-        img{
-            width: $porcentaje-estandar-100;
-            height: $porcentaje-estandar-100;
-            object-fit: $imagen-espacio;
-        }
-        .contenedorIndex{
-            background-color: $color-estandar-3;
-        }
-    }
-    
-    .contenedorCard{
-        margin:0 $posicion-estandar-auto;
-        gap:3rem;
-        .cardRecomendado{
-            width:$medida-estandar-350;
-            height:$posicion-estandar-auto;
-            background: $color-estandar-4;
-            border-radius: $borde-estandar-1;
-            .imgInicio{
-                width: $medida-estandar-200;
-                height: $medida-estandar-320;
-            }
-        }
-    }
-}
-
-/***** Pantalla Analisis *****/
-
-main{
-    background-image: $imagen-fondo-main;
-    background-attachment: $imagen-agregado;
-    background-repeat: no-repeat;
-
-    .divDiablo4{
-        height: $medida-estandar-600;
-        background-image: $imagen-fondo-diablo-1;
-        background-position:$posicion-estandar-top;
-        border-bottom: $borde-estandar-2;
-        border-top: $borde-estandar-2;
-        .hoverAnalisis:hover{
-            background: $color-estandar-5;
-            border-radius: $borde-estandar-1;
-        }
-        .contenedorFondoAnalisis{
-            width: $medida-estandar-600;
-            .contenedorAnalisis{
-                background-color: $color-estandar-6;
-                height: $posicion-estandar-auto;
-            }
-        }
-    }
-    
-    .divNoMamSky{
-        height: $medida-estandar-600;
-        background-image: $imagen-fondo-sky-1;
-        border-bottom: $borde-estandar-2;
-        .hoverAnalisis:hover{
-            background: $color-estandar-5;
-            border-radius: $borde-estandar-1;
-        }
-        .contenedorFondoAnalisis{
-            width: $medida-estandar-600;
-            .contenedorAnalisis{
-                background-color: $color-estandar-6;
-                height: $posicion-estandar-auto;
-            }
-        }
-    }
-    
-    .divStreetFighter{
-        height: $medida-estandar-600;
-        background-image: $imagen-fondo-street-1;
-        background-position-x: $posicion-estandar-center;
-        background-position-y:$posicion-estandar-center;
-        border-bottom: $borde-estandar-2;
-        .hoverAnalisis:hover{
-            background: $color-estandar-5;
-            border-radius: $borde-estandar-1;
-        }
-        .contenedorFondoAnalisis{
-            width: $medida-estandar-600;
-            .contenedorAnalisis{
-                background-color: $color-estandar-6;
-                height: $posicion-estandar-auto;
-            }
-        }
-    }
-    
-    .divDredge{
-        height: $medida-estandar-600;
-        background-image: $imagen-fondo-dredge-1;
-        background-position: $posicion-estandar-bottom;
-        border-bottom: $borde-estandar-2;
-        .hoverAnalisis:hover{
-            background: $color-estandar-5;
-            border-radius: $borde-estandar-1;
-        }
-        .contenedorFondoAnalisis{
-            width: $medida-estandar-600;
-            .contenedorAnalisis{
-                background-color: $color-estandar-6;
-                height: $posicion-estandar-auto;
-            }
-        }
-    }
-    
-    .divStarWars{
-        height: $medida-estandar-600;
-        background-image: $imagen-fondo-star-1;
-        background-position-y:$posicion-estandar-center;
-        border-bottom: $borde-estandar-2;
-        margin-bottom: $medida-estandar-50;
-        .hoverAnalisis:hover{
-            background: $color-estandar-5;
-            border-radius: $borde-estandar-1;
-        }
-        .contenedorFondoAnalisis{
-            width: $medida-estandar-600;
-            .contenedorAnalisis{
-                background-color: $color-estandar-6;
-                height: $posicion-estandar-auto;
-            }
-        }
-    }
-}
-
-
-
-/***** Pantalla Avances *****/
-
-main{
-    background-image: $imagen-fondo-main;
-    background-attachment: $imagen-agregado;
-    background-repeat: no-repeat;
-
-    .divContenedorAvance1{
-        background-image: $imagen-fondo-avance-1;
-        border-bottom: $borde-estandar-2;
-        border-top: $borde-estandar-2;
-        .imagenAvances{
-            width: $medida-estandar-500;
-            height: $medida-estandar-300;
-        }
-        .iFrame{
-            width:$medida-estandar-500; 
-            height:$medida-estandar-300
-        }
-    }
-    
-    .divContenedorAvance2{
-        background-image: $imagen-fondo-avance-2;
-        border-bottom: $borde-estandar-2;
-        .imagenAvances{
-            width: $medida-estandar-500;
-            height: $medida-estandar-300;
-        }
-        .iFrame{
-            width:$medida-estandar-500; 
-            height:$medida-estandar-300
-        }
-    }
-}
-
-/***** Pantalla Guias *****/
-
-main{
-    background-image: $imagen-fondo-main;
-    background-attachment: $imagen-agregado;
-    background-repeat: no-repeat;
-
-    .parrafoColor{
-        color: $color-estandar-7;
-    }
-    
-    .parrafoHover:hover{
-        color:$color-estandar-1
-    }
-}
-
-/***** Pantalla Contacto *****/
-
-main{
-    background-image: $imagen-fondo-main;
-    background-attachment: $imagen-agregado;
-    background-repeat: no-repeat;
-
-    .btnForm{
-        background-color: $color-estandar-8;
-    }
-    
-    .btnForm:hover{
-        background-color: $color-estandar-9;
-    }
-        
-    .formulario{
-        width: $porcentaje-estandar-60;
-    }
-}
-
-/************************************************
-                    FOOTER 
-************************************************/
-
-.divFooter{
-    background: $degradado-principal;
-    
-    img{
-        width: $medida-estandar-30;
-        height: $medida-estandar-40;
-        margin-right: $medida-estandar-10;
-        padding-bottom: $medida-estandar-10;
-        margin-left: $medida-estandar-10;
-    }
-}
-
-/************************************************
-                 MEDIA QUERIES 
-************************************************/
-
-@media screen and (min-width:0px) and (max-width: 768px){
-
-    /************************************************
-                 MEDIA QUERIES MAIN
-    ************************************************/
-    
-    .h1Tittle{
-        font-size: $fuente-escala-2;
-    }
-
-    .h2Tittle{
-        font-size: $fuente-escala-2;
-    }
-
-    .h4Tittle{
-        font-size: $fuente-escala-1;
-    }
-
-    .parrafo{
-        font-size: $fuente-escala-1;
-    }
-
-    /***** Pantalla Index *****/
-
-    main{
-        .contenedorInicio{
-            height: $posicion-estandar-auto;
-            width: $porcentaje-estandar-90;
-            .tituloPrincipal{
-                font-size: $medida-estandar-25;
-            }
-        }
-    
-        .carousel-item{
-            height: $posicion-estandar-auto;
-        }
-    
-        .contenedorCard{
-            flex-direction: $direccion-estandar-column;
-            .cardRecomendado{
-                width: $porcentaje-estandar-100;
-            }
-        }
-    }
-
-    /***** Pantalla Analisis *****/
-    main{
-        .divDiablo4{
-            background-image: $imagen-fondo-diablo-2;
-        }
-    
-        .divNoMamSky{
-            background-image: $imagen-fondo-sky-2;
-        }
-    
-        .divStreetFighter{
-            background-image: $imagen-fondo-street-2;
-        }
-    
-        .divDredge{
-            background-image: $imagen-fondo-dredge-2;
-        }
-    
-        .divStarWars{
-            background-image: $imagen-fondo-star-2;
-        }
-    }
-
-    /***** Pantalla Avances *****/
-
-    main{
-        .invertir{
-            flex-direction: $direccion-estandar-col-rev;
-        }
-
-        .imagenAvances{
-            width: $porcentaje-estandar-100;
-            height: $posicion-estandar-auto;
-        }
-
-        .iFrame{
-            width: $porcentaje-estandar-100;
-            height:$medida-estandar-200;
-        }
-    }
-
-    /***** Pantalla Contacto *****/
-
-    main{  
-        .formulario{
-            width: $porcentaje-estandar-100;
-        }
-    }
-    /************************************************
-                 MEDIA QUERIES FOOTER 
-    ************************************************/
-
-    .links{
-        width: $porcentaje-estandar-100;
-    }
-}
+@import 'variables.scss';
+@import 'reset.scss';
+@import 'utilitarias.scss';
+@import 'header.scss';
+@import 'main.scss';
+@import 'footer.scss';
